Add koa-router demo

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "rollup-plugin-uglify": "^6.0.2"
   },
   "dependencies": {
-    "koa": "^2.7.0"
+    "koa": "^2.7.0",
+    "koa-bodyparser": "^4.2.1",
+    "koa-router": "^7.4.0"
   }
 }
