--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "rollup -c -w"
   },
   "devDependencies": {
+    "@types/graphql": "^14.2.3",
     "@types/koa": "^2.0.49",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-router": "^7.0.42",
@@ -26,6 +27,8 @@
     "rollup-plugin-uglify": "^6.0.2"
   },
   "dependencies": {
+    "apollo-server-koa": "^2.8.1",
+    "graphql": "^14.4.2",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
